<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary0"
    tools:context="com.example.linh.graphonarcore.MainActivity">

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ubuntu_light"
            android:paddingTop="0dp"
            android:text="@string/x_axis"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/XTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:fontFamily="@font/ubuntu_light"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:textColor="@color/colorSecondary0"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/XUnit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:fontFamily="@font/ubuntu_light"
            android:hint="@string/units"
            android:inputType="textPersonName"
            android:textColor="@color/colorSecondary0"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ubuntu_light"
            android:paddingTop="20dp"
            android:text="@string/y_axis"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/YTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:fontFamily="@font/ubuntu_light"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:textColor="@color/colorSecondary0"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/YUnit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:fontFamily="@font/ubuntu_light"
            android:hint="@string/units"
            android:inputType="textPersonName"
            android:textColor="@color/colorSecondary0"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ubuntu_light"
            android:paddingTop="20dp"
            android:text="@string/z_axis"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ZTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:fontFamily="@font/ubuntu_light"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:textColor="@color/colorSecondary0"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ZUnit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:fontFamily="@font/ubuntu_light"
            android:hint="@string/units"
            android:inputType="textPersonName"
            android:textColor="@color/colorSecondary0"
            android:textSize="18sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
